kubernetes-config/web-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   labels:
        app: events-web
   name: events-web-v2.0
spec:
   replicas: 2
   selector:
       matchLabels:
           app: events-web
           ver: v2.0
   template:
      metadata:
           labels:
             app: events-web
             ver: v2.0
      spec:
          containers:
          - image: gcr.io/roidtc-august22-u215/events-website:v2.0
            name: events-web-v2
            ports:
            - containerPort: 8080
