kubernetes-config/api-service.yaml
apiVersion: v1
kind: Service
metadata:
   labels:
        app: events-api-svc
   name: events-api-svc
spec:
   ports:
   - port: 8082
     protocol: TCP
     targetPort: 8082
   selector:
     app: events-api
     ver: v1.0
   type: ClusterIP
