kubernetes-config/block-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
 name: default-deny-all-egress
 namespace: test
spec:
 policyTypes:
 - Egress
 podSelector: {}
 egress: []
